// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal|Debate.Votes connection fetches 5 first votes associated to a debate with a cursor 1`] = `
Object {
  "node": Object {
    "votes": Object {
      "edges": Array [
        Object {
          "cursor": "YToyOntpOjA7aTotOTIyMzM3MjAzNjg1NDc3NTgwODtpOjE7czo1OiIxMzAwMCI7fQ==",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyU3B5bA==",
            },
            "createdAt": "2015-01-01 09:01:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwMA==",
            "published": true,
            "publishedAt": "2015-01-01 09:01:00",
            "type": "AGAINST",
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aTotOTIyMzM3MjAzNjg1NDc3NTgwODtpOjE7czo1OiIxMzAwMSI7fQ==",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VySWFu",
            },
            "createdAt": "2015-01-01 09:02:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwMQ==",
            "published": true,
            "publishedAt": "2015-01-01 09:02:00",
            "type": "FOR",
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aTotOTIyMzM3MjAzNjg1NDc3NTgwODtpOjE7czo1OiIxMzAwMiI7fQ==",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyTWlja2FlbA==",
            },
            "createdAt": "2015-01-01 09:03:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwMg==",
            "published": true,
            "publishedAt": "2015-01-01 09:03:00",
            "type": "AGAINST",
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aTotOTIyMzM3MjAzNjg1NDc3NTgwODtpOjE7czo1OiIxMzAwMyI7fQ==",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VySnBlYw==",
            },
            "createdAt": "2015-01-01 09:04:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwMw==",
            "published": true,
            "publishedAt": "2015-01-01 09:04:00",
            "type": "FOR",
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aTotOTIyMzM3MjAzNjg1NDc3NTgwODtpOjE7czo1OiIxMzAwNCI7fQ==",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyVGhlbw==",
            },
            "createdAt": "2015-01-01 09:05:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwNA==",
            "published": true,
            "publishedAt": "2015-01-01 09:05:00",
            "type": "AGAINST",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YToyOntpOjA7aTotOTIyMzM3MjAzNjg1NDc3NTgwODtpOjE7czo1OiIxMzAwNCI7fQ==",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "YToyOntpOjA7aTotOTIyMzM3MjAzNjg1NDc3NTgwODtpOjE7czo1OiIxMzAwMCI7fQ==",
      },
      "totalCount": 10,
    },
  },
}
`;

exports[`Internal|Debate.Votes connection fetches 5 next votes associated to a debate with a cursor 1`] = `
Object {
  "node": Object {
    "votes": Object {
      "edges": Array [
        Object {
          "cursor": "YToyOntpOjA7aTotOTIyMzM3MjAzNjg1NDc3NTgwODtpOjE7czo1OiIxMzAwNSI7fQ==",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyT21hcg==",
            },
            "createdAt": "2015-01-01 09:06:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwNQ==",
            "published": true,
            "publishedAt": "2015-01-01 09:06:00",
            "type": "AGAINST",
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aTotOTIyMzM3MjAzNjg1NDc3NTgwODtpOjE7czo1OiIxMzAwNiI7fQ==",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VySmVhbg==",
            },
            "createdAt": "2015-01-01 09:07:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwNg==",
            "published": true,
            "publishedAt": "2015-01-01 09:07:00",
            "type": "AGAINST",
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aTotOTIyMzM3MjAzNjg1NDc3NTgwODtpOjE7czo1OiIxMzAwNyI7fQ==",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyVmluY2VudA==",
            },
            "createdAt": "2015-01-01 09:08:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwNw==",
            "published": true,
            "publishedAt": "2015-01-01 09:08:00",
            "type": "AGAINST",
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aTotOTIyMzM3MjAzNjg1NDc3NTgwODtpOjE7czo1OiIxMzAwOCI7fQ==",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyQWd1aQ==",
            },
            "createdAt": "2015-01-01 09:09:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwOA==",
            "published": true,
            "publishedAt": "2015-01-01 09:09:00",
            "type": "AGAINST",
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aTotOTIyMzM3MjAzNjg1NDc3NTgwODtpOjE7czo1OiIxMzAwOSI7fQ==",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyTWF4aW1l",
            },
            "createdAt": "2015-01-01 09:10:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwOQ==",
            "published": true,
            "publishedAt": "2015-01-01 09:10:00",
            "type": "AGAINST",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YToyOntpOjA7aTotOTIyMzM3MjAzNjg1NDc3NTgwODtpOjE7czo1OiIxMzAwOSI7fQ==",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "YToyOntpOjA7aTotOTIyMzM3MjAzNjg1NDc3NTgwODtpOjE7czo1OiIxMzAwNSI7fQ==",
      },
      "totalCount": 10,
    },
  },
}
`;

exports[`Internal|Debate.Votes connection fetches all votes counters associated to a debate when client is an admin 1`] = `
Object {
  "node": Object {
    "againstVotes": Object {
      "totalCount": 9,
    },
    "allVotes": Object {
      "totalCount": 11,
    },
    "forVotes": Object {
      "totalCount": 2,
    },
  },
}
`;

exports[`Internal|Debate.Votes connection fetches published votes counters associated to a debate 1`] = `
Object {
  "node": Object {
    "againstVotes": Object {
      "totalCount": 8,
    },
    "allVotes": Object {
      "totalCount": 10,
    },
    "forVotes": Object {
      "totalCount": 2,
    },
  },
}
`;

exports[`Internal|Debate.Votes connection fetches unpublished votes counters associated to a debate when client is an admin 1`] = `
Object {
  "node": Object {
    "againstVotes": Object {
      "totalCount": 1,
    },
    "allVotes": Object {
      "totalCount": 1,
    },
    "forVotes": Object {
      "totalCount": 0,
    },
  },
}
`;

exports[`Internal|Debate.Votes connection fetches votes associated to a debate and a FOR type with a cursor 1`] = `
Object {
  "node": Object {
    "votes": Object {
      "edges": Array [
        Object {
          "cursor": "YToyOntpOjA7aTotOTIyMzM3MjAzNjg1NDc3NTgwODtpOjE7czo1OiIxMzAwMSI7fQ==",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VySWFu",
            },
            "createdAt": "2015-01-01 09:02:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwMQ==",
            "published": true,
            "publishedAt": "2015-01-01 09:02:00",
            "type": "FOR",
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aTotOTIyMzM3MjAzNjg1NDc3NTgwODtpOjE7czo1OiIxMzAwMyI7fQ==",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VySnBlYw==",
            },
            "createdAt": "2015-01-01 09:04:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwMw==",
            "published": true,
            "publishedAt": "2015-01-01 09:04:00",
            "type": "FOR",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YToyOntpOjA7aTotOTIyMzM3MjAzNjg1NDc3NTgwODtpOjE7czo1OiIxMzAwMyI7fQ==",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "YToyOntpOjA7aTotOTIyMzM3MjAzNjg1NDc3NTgwODtpOjE7czo1OiIxMzAwMSI7fQ==",
      },
      "totalCount": 2,
    },
  },
}
`;

exports[`Internal|Debate.Votes connection fetches votes associated to a debate and an AGAINST type with a cursor 1`] = `
Object {
  "node": Object {
    "votes": Object {
      "edges": Array [
        Object {
          "cursor": "YToyOntpOjA7aTotOTIyMzM3MjAzNjg1NDc3NTgwODtpOjE7czo1OiIxMzAwMCI7fQ==",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyU3B5bA==",
            },
            "createdAt": "2015-01-01 09:01:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwMA==",
            "published": true,
            "publishedAt": "2015-01-01 09:01:00",
            "type": "AGAINST",
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aTotOTIyMzM3MjAzNjg1NDc3NTgwODtpOjE7czo1OiIxMzAwMiI7fQ==",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyTWlja2FlbA==",
            },
            "createdAt": "2015-01-01 09:03:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwMg==",
            "published": true,
            "publishedAt": "2015-01-01 09:03:00",
            "type": "AGAINST",
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aTotOTIyMzM3MjAzNjg1NDc3NTgwODtpOjE7czo1OiIxMzAwNCI7fQ==",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyVGhlbw==",
            },
            "createdAt": "2015-01-01 09:05:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwNA==",
            "published": true,
            "publishedAt": "2015-01-01 09:05:00",
            "type": "AGAINST",
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aTotOTIyMzM3MjAzNjg1NDc3NTgwODtpOjE7czo1OiIxMzAwNSI7fQ==",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyT21hcg==",
            },
            "createdAt": "2015-01-01 09:06:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwNQ==",
            "published": true,
            "publishedAt": "2015-01-01 09:06:00",
            "type": "AGAINST",
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aTotOTIyMzM3MjAzNjg1NDc3NTgwODtpOjE7czo1OiIxMzAwNiI7fQ==",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VySmVhbg==",
            },
            "createdAt": "2015-01-01 09:07:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwNg==",
            "published": true,
            "publishedAt": "2015-01-01 09:07:00",
            "type": "AGAINST",
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aTotOTIyMzM3MjAzNjg1NDc3NTgwODtpOjE7czo1OiIxMzAwNyI7fQ==",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyVmluY2VudA==",
            },
            "createdAt": "2015-01-01 09:08:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwNw==",
            "published": true,
            "publishedAt": "2015-01-01 09:08:00",
            "type": "AGAINST",
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aTotOTIyMzM3MjAzNjg1NDc3NTgwODtpOjE7czo1OiIxMzAwOCI7fQ==",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyQWd1aQ==",
            },
            "createdAt": "2015-01-01 09:09:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwOA==",
            "published": true,
            "publishedAt": "2015-01-01 09:09:00",
            "type": "AGAINST",
          },
        },
        Object {
          "cursor": "YToyOntpOjA7aTotOTIyMzM3MjAzNjg1NDc3NTgwODtpOjE7czo1OiIxMzAwOSI7fQ==",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyTWF4aW1l",
            },
            "createdAt": "2015-01-01 09:10:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwOQ==",
            "published": true,
            "publishedAt": "2015-01-01 09:10:00",
            "type": "AGAINST",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YToyOntpOjA7aTotOTIyMzM3MjAzNjg1NDc3NTgwODtpOjE7czo1OiIxMzAwOSI7fQ==",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "YToyOntpOjA7aTotOTIyMzM3MjAzNjg1NDc3NTgwODtpOjE7czo1OiIxMzAwMCI7fQ==",
      },
      "totalCount": 8,
    },
  },
}
`;

exports[`Internal|Debate.Votes connection fetches votes ip associated to a debate 1`] = `
Object {
  "node": Object {
    "votes": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwMA==",
            "ipAddress": null,
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwMQ==",
            "ipAddress": null,
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwMg==",
            "ipAddress": "142.042.042.042",
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwMw==",
            "ipAddress": null,
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwNA==",
            "ipAddress": null,
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwNQ==",
            "ipAddress": null,
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwNg==",
            "ipAddress": null,
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwNw==",
            "ipAddress": null,
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwOA==",
            "ipAddress": null,
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwOQ==",
            "ipAddress": null,
          },
        },
      ],
    },
  },
}
`;

exports[`Internal|Debate.Votes connection fetches votes ip associated to a debate without rights 1`] = `
Object {
  "node": Object {
    "votes": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwMA==",
            "ipAddress": null,
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwMQ==",
            "ipAddress": null,
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwMg==",
            "ipAddress": null,
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwMw==",
            "ipAddress": null,
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwNA==",
            "ipAddress": null,
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwNQ==",
            "ipAddress": null,
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwNg==",
            "ipAddress": null,
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwNw==",
            "ipAddress": null,
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwOA==",
            "ipAddress": null,
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwOQ==",
            "ipAddress": null,
          },
        },
      ],
    },
  },
}
`;

exports[`Internal|Debate.Votes connection fetches votes origin 1`] = `
Object {
  "node": Object {
    "votes": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwMA==",
            "origin": "INTERNAL",
            "widgetOriginUrl": null,
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwMQ==",
            "origin": "INTERNAL",
            "widgetOriginUrl": null,
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwMg==",
            "origin": "MAIL",
            "widgetOriginUrl": null,
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwMw==",
            "origin": "INTERNAL",
            "widgetOriginUrl": null,
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwNA==",
            "origin": "INTERNAL",
            "widgetOriginUrl": null,
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwNQ==",
            "origin": "INTERNAL",
            "widgetOriginUrl": null,
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwNg==",
            "origin": "INTERNAL",
            "widgetOriginUrl": null,
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwNw==",
            "origin": "WIDGET",
            "widgetOriginUrl": "www.lemonde.fr",
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwOA==",
            "origin": "INTERNAL",
            "widgetOriginUrl": null,
          },
        },
        Object {
          "node": Object {
            "id": "RGViYXRlVm90ZToxMzAwOQ==",
            "origin": "INTERNAL",
            "widgetOriginUrl": null,
          },
        },
      ],
    },
  },
}
`;
